--- a/tax/pom.xml
+++ b/tax/pom.xml
@@ -34,6 +34,14 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+		<dependency>  
+			<groupId>org.imgscalr</groupId>  
+			<artifactId>imgscalr-lib</artifactId>  
+			<version>4.2</version>  
+			<type>jar</type>  
+			<scope>compile</scope>  
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
